--- a/LinkShortener-UI/src/main/webapp/statics/css/fontello.css
+++ b/LinkShortener-UI/src/main/webapp/statics/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.eot?99732880');
-    src: url('../font/fontello.eot?99732880#iefix') format('embedded-opentype'),
-    url('../font/fontello.woff2?99732880') format('woff2'),
-    url('../font/fontello.woff?99732880') format('woff'),
-    url('../font/fontello.ttf?99732880') format('truetype'),
-    url('../font/fontello.svg?99732880#fontello') format('svg');
+    src: url('../font/fontello.eot?48527756');
+    src: url('../font/fontello.eot?48527756#iefix') format('embedded-opentype'),
+    url('../font/fontello.woff2?48527756') format('woff2'),
+    url('../font/fontello.woff?48527756') format('woff'),
+    url('../font/fontello.ttf?48527756') format('truetype'),
+    url('../font/fontello.svg?48527756#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -16,11 +16,10 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?99732880#fontello') format('svg');
+    src: url('../font/fontello.svg?48527756#fontello') format('svg');
   }
 }
 */
-
 [class^="icon-"]:before, [class*=" icon-"]:before {
     font-family: "fontello";
     font-style: normal;
@@ -56,11 +55,21 @@
     /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-scissors:before {
+.icon-trash:before {
     content: '\e800';
 }
 
 /* '' */
+.icon-eye-off:before {
+    content: '\e801';
+}
+
+/* '' */
+.icon-eye:before {
+    content: '\e802';
+}
+
+/* '' */
 .icon-hand-scissors-o:before {
     content: '\f257';
 }
